--- a/.github/workflows/integration_test.yaml
+++ b/.github/workflows/integration_test.yaml
@@ -1,5 +1,7 @@
 name:  Run integration tests
-on: [push, pull_request]
+on:
+  pull_request:
+    branches: [ master ]
 jobs:
   integration_test:
     name: Integration test
