Improved workflows by expanding integration testing (#2)
* changes workflows to run on pull_requests into develop

* added macos desktop support

* added integration test for macos desktop

* fixed code quality check

* changed flutter version to dev

* reverted changes in iOS/Flutter

* changed ios integration test to use flutter stable

* added specific version to macOS integration build

* fixed typo in flutter macos desktop configuration

* added debug info

* added checkout to macos integration test

* removed debug statements

* added pod setup progress

* removed spacing

* adjusted formatting

* fixed syntax error

* fixed run syntax errpr

* adjusted pipe

* added debug step to workflow

* changed pod init to pod install

* added pub get

* added debug statement

* Added another debug statement

* improved pipe

* removed debug steps

* added flutter for linux

* added ubuntu workflow

* added requirements

* added snapcraft to linux integration test

* fixed syntax error in workflow

* added debug command to snapcraft

* removed debug

* removed classic from snap command

* added debug

* removed snapcraft action and used command line

* removed -d linux from flutter drive command

* added enable-linux-desktop to workflow

* added apt-get command

* changed flutter drive to release due to problems with debug connection

* changed flutter drive to debug

* added flutter clean

* changed to run on ubuntu-16

* added -d option

* changed to beta channel

* switched channel back to dev

* added flutter doctor

* added apt-get upgrade

* fixed typo in apt-get update

* set specific ninja-build version

* set ninja build version to 1.10.2

* updated to ubuntu-latest

* added android test

* added env variable

* forgot to but env

* remove script execution

* added ls for debug

* removed debug ls and cd into folder

* removed ls

* updated emulato

--- a/.github/workflows/code_quality.yaml
+++ b/.github/workflows/code_quality.yaml
@@ -1,7 +1,7 @@
 name:  Check code quality
 on:
   pull_request:
-    branches: [ master ]
+    branches: [ master, develop ]
 jobs:
   code_quality:
     name: Code quality
@@ -10,5 +10,5 @@ jobs:
       - uses: actions/checkout@master
       - uses: subosito/flutter-action@v1
         with:
-        channel: stable
+          channel: stable
       - run: flutter analyze
