--- a/.github/workflows/code_coverage.yaml
+++ b/.github/workflows/code_coverage.yaml
@@ -1,7 +1,7 @@
 name:  Check code coverage
 on:
   pull_request:
-    branches: [ master ]
+    branches: [ master, develop ]
 jobs:
   code_coverage:
     name: Code coverage
